--- a/58new.html
+++ b/58new.html
@@ -27,7 +27,7 @@
   <script>
     function openGame() {
     var win = window.open()
-    var url ="https://cmyqtn-8080.csb.app/"
+    var url ="https://gointerstellar.app/"
     var iframe = win.document.createElement('iframe')
     iframe.style.width = "100%";
     iframe.style.height = "100%";
