--- a/games222.html
+++ b/games222.html
@@ -139,7 +139,7 @@ a:hover{color: green;}
 
 <div class="vex_x">
       <!--   <div class="col-lg-12 col-md-4 col-6 list-grid">
-              <a  title="Basket Bros" href="/play/basket-bros.html">
+              <a  title="Basket Bros" href="basket-bros.html">
                 <div class="list-game">
                   <div class="list-thumbnail"><img src="https://abinbins.github.io/thumb/basket-bros.png" data-src="https://abinbins.github.io/thumb/basket-bros.png" class="small-thumb img-rounded lazyload" alt="Basket Bros"></div>
                   <div style="color: white;"><strong>Basket Bros</strong></div>
